--- a/JenkinsFile
+++ b/JenkinsFile
@@ -20,7 +20,7 @@ pipeline {
         stage('Terraform Apply') {
             steps {
                 script {
-                    sh 'terraform apply -var-file=terraform.tfvars -var-file-vars.tfvars -auto-approve'
+                    sh 'terraform apply -var-file=<(cat terraform.tfvars vars.tfvars)
                 }
             }
         }
