--- a/JenkinsFile
+++ b/JenkinsFile
@@ -17,13 +17,13 @@ pipeline {
                 }
             }
         }
-        stage('Terraform Create first worksapce') {
+       /* stage('Terraform Create first worksapce') {
             steps {
                 script {
                     sh 'terraform workspace new first'
                 }
             }
-        }
+        } */
         stage('Terraform seclect first worksapce') {
             steps {
                 script {
@@ -38,13 +38,13 @@ pipeline {
                 }
             }
         }
-                stage('Terraform Create secound worksapce') {
+      /*  stage('Terraform Create secound worksapce') {
             steps {
                 script {
                     sh 'terraform workspace new first'
                 }
             }
-        }
+        } */
         stage('Terraform seclect secound worksapce') {
             steps {
                 script {
