--- a/JenkinsFile
+++ b/JenkinsFile
@@ -5,9 +5,13 @@ pipeline {
         AWS_SECRET_ACCESS_KEY = credentials('aws-secret-access-key')  
     }
     stages {
-        stage('Checkout Repository') {
+        stage('Checkout creator repository') {
             steps {
                 git url: 'https://github.com/vKemo/s3Creator/', branch: 'main'
+            }
+        }
+        stage('Checkout vars repository') {
+            steps {
                 git url: 'https://github.com/vKemo/s3Vars/', branch: 'main'
             }
         }
