--- a/JenkinsFile
+++ b/JenkinsFile
@@ -19,6 +19,14 @@ pipeline {
                 }
             }
         }
+        stage('Debug Workspace') {
+            steps {
+                script {
+                    sh 'ls -la' 
+                    sh 'find . -name "*.tfvars"'
+                }
+            }
+        }
         stage('Terraform Init') {
             steps {
                 script {
@@ -43,7 +51,7 @@ pipeline {
         stage('Terraform Apply first vars') {
             steps {
                 script {
-                    sh 'terraform apply -var-file=terraform.tfvars -auto-approve'
+                    sh 'terraform apply -var-file=path/to/terraform.tfvars -auto-approve'
                 }
             }
         }
@@ -64,7 +72,7 @@ pipeline {
         stage('Terraform Apply second vars') {
             steps {
                 script {
-                    sh 'terraform apply -var-file=vars.tfvars -auto-approve'
+                    sh 'terraform apply -var-file=path/to/vars.tfvars -auto-approve'
                 }
             }
         }
