--- a/JenkinsFile
+++ b/JenkinsFile
@@ -5,12 +5,12 @@ pipeline {
         AWS_SECRET_ACCESS_KEY = credentials('aws-secret-access-key')  
     }
     stages {
-        stage('Checkout creator repository') {
+        stage('Checkout Creator Repository') {
             steps {
                 git url: 'https://github.com/vKemo/s3Creator/', branch: 'main'
             }
         }
-        stage('Checkout vars repository') {
+        stage('Checkout Vars Repository') {
             steps {
                 git url: 'https://github.com/vKemo/s3Vars/', branch: 'main'
             }
@@ -22,45 +22,25 @@ pipeline {
                 }
             }
         }
-        stage('Terraform Create first workspace') {
+        stage('Terraform Apply First Workspace') {
             steps {
                 script {
-                    sh 'terraform workspace new first || true'
+                    sh '''
+                    terraform workspace new first || true
+                    terraform workspace select first
+                    terraform apply -var-file=vars.tfvars -auto-approve
+                    '''
                 }
             }
         }
-        stage('Terraform Select first workspace') {
+        stage('Terraform Apply Second Workspace') {
             steps {
                 script {
-                    sh 'terraform workspace select first'
-                }
-            }
-        }
-        stage('Terraform Apply first vars') {
-            steps {
-                script {
-                    sh 'terraform apply -var-file=terraform.tfvars -auto-approve'
-                }
-            }
-        }
-        stage('Terraform Create second workspace') {
-            steps {
-                script {
-                    sh 'terraform workspace new second || true' 
-                }
-            }
-        }
-        stage('Terraform Select second workspace') {
-            steps {
-                script {
-                    sh 'terraform workspace select second'
-                }
-            }
-        }
-        stage('Terraform Apply second vars') {
-            steps {
-                script {
-                    sh 'terraform apply -var-file=vars.tfvars -auto-approve'
+                    sh '''
+                    terraform workspace new second || true
+                    terraform workspace select second
+                    terraform apply -var-file=terraform.tfvars -auto-approve
+                    '''
                 }
             }
         }
