--- a/JenkinsFile
+++ b/JenkinsFile
@@ -28,7 +28,7 @@ pipeline {
                     sh '''
                     terraform workspace new first || true
                     terraform workspace select first
-                    terraform apply -var-file=vars.tfvars -auto-approve
+                    terraform apply -var-file=../s3Vars/vars.tfvars -auto-approve
                     '''
                 }
             }
@@ -39,7 +39,7 @@ pipeline {
                     sh '''
                     terraform workspace new second || true
                     terraform workspace select second
-                    terraform apply -var-file=terraform.tfvars -auto-approve
+                    terraform apply -var-file=../s3Vars/terraform.tfvars -auto-approve
                     '''
                 }
             }
