--- a/JenkinsFile
+++ b/JenkinsFile
@@ -5,14 +5,17 @@ pipeline {
         AWS_SECRET_ACCESS_KEY = credentials('aws-secret-access-key')  
     }
     stages {
-        stage('Checkout Creator Repository') {
-            steps {
-                git url: 'https://github.com/vKemo/s3Creator/', branch: 'main'
-            }
-        }
         stage('Checkout Vars Repository') {
             steps {
-                git url: 'https://github.com/vKemo/s3Vars/', branch: 'main'
+    
+                dir('s3Vars') {
+                    git url: 'https://github.com/vKemo/s3Vars/', branch: 'main'
+                }
+            }
+        }
+           stage('Checkout Creator Repository') {
+            steps {
+                git url: 'https://github.com/vKemo/s3Creator/', branch: 'main'
             }
         }
         stage('Terraform Init') {
@@ -25,10 +28,11 @@ pipeline {
         stage('Terraform Apply First Workspace') {
             steps {
                 script {
+ 
                     sh '''
                     terraform workspace new first || true
                     terraform workspace select first
-                    terraform apply -var-file=vars.tfvars -auto-approve
+                    terraform apply -var-file=s3Vars/vars.tfvars -auto-approve
                     '''
                 }
             }
@@ -36,10 +40,11 @@ pipeline {
         stage('Terraform Apply Second Workspace') {
             steps {
                 script {
+               
                     sh '''
                     terraform workspace new second || true
                     terraform workspace select second
-                    terraform apply -var-file=terraform.tfvars -auto-approve
+                    terraform apply -var-file=s3Vars/terraform.tfvars -auto-approve
                     '''
                 }
             }
