--- a/JenkinsFile
+++ b/JenkinsFile
@@ -12,7 +12,9 @@ pipeline {
         }
         stage('Checkout Vars Repository') {
             steps {
+                dir('s3Vars') {
                     git url: 'https://github.com/vKemo/s3Vars/', branch: 'main'
+                }
             }
         }
         stage('Terraform Init') {
@@ -30,7 +32,7 @@ pipeline {
                     sh '''
                     terraform workspace new first || true
                     terraform workspace select first
-                    terraform apply -var-file=vars.tfvars -auto-approve
+                    terraform apply -var-file=s3Vars/vars.tfvars -auto-approve
                     '''
                 }
             }
@@ -41,7 +43,7 @@ pipeline {
                     sh '''
                     terraform workspace new second || true
                     terraform workspace select second
-                    terraform apply -var-file=terraform.tfvars -auto-approve
+                    terraform apply -var-file=s3Vars/terraform.tfvars -auto-approve
                     '''
                 }
             }
