--- a/JenkinsFile
+++ b/JenkinsFile
@@ -21,7 +21,7 @@ pipeline {
             steps {
                 script {
       
-                    sh 'terraform init -auto-approve'
+                    sh 'terraform init'
                 }
             }
         }
