--- a/JenkinsFile
+++ b/JenkinsFile
@@ -21,7 +21,10 @@ pipeline {
             steps {
                 script {
       
-                    sh 'terraform init'
+                    sh '''
+                    terraform init
+                    yes
+                    '''
                 }
             }
         }
